force-app/main/default/objects/PLM_Product_Family__c/PLM_Product_Family__c.object-meta.xml
<CustomObject>
    <label>Product Family</label>
    <nameField>
        <displayFormat>PF-{0000000}</displayFormat>
        <label>Product Family #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Family</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>