force-app/main/default/objects/PLM_Product_Family__c/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Author</label>
    <referenceTo>PLM_Author__c</referenceTo>
    <relationshipLabel>Product Family</relationshipLabel>
    <relationshipName>Product_Family</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>