force-app/main/default/objects/PLM_Product_Family__c/fields/Copy_Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Copy_Product_Family__c</fullName>
    <label>Copy Product Family</label>
    <length>200</length>
    <type>Text</type>
</CustomField>