force-app/main/default/objects/PLM_Product_Family__c/fields/CRD__c.field-meta.xml
<CustomField>
    <fullName>CRD__c</fullName>
    <label>CRD</label>
    <type>Date</type>
</CustomField>