force-app/main/default/objects/PLM_Product_Family__c/fields/Editor_Code__c.field-meta.xml
<CustomField>
    <fullName>Editor_Code__c</fullName>
    <label>Editor Code</label>
    <length>200</length>
    <type>Text</type>
</CustomField>