force-app/main/default/objects/PLM_Product_Family__c/fields/Editor_Name__c.field-meta.xml
<CustomField>
    <fullName>Editor_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Editor Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Product_Group_Origin_Description__c</field>
            <operation>equals</operation>
            <valueField>PLM_Editor__c.Location__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>PLM_Editor__c</referenceTo>
    <relationshipLabel>Product Family</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>