force-app/main/default/objects/PLM_Product_Family__c/fields/Global_Subject_Category_Code__c.field-meta.xml
<CustomField>
    <fullName>Global_Subject_Category_Code__c</fullName>
    <label>Global Subject Category Code</label>
    <length>200</length>
    <type>Text</type>
</CustomField>