force-app/main/default/objects/PLM_Product_Family__c/fields/Global_Subject_Category_Description__c.field-meta.xml
<CustomField>
    <fullName>Global_Subject_Category_Description__c</fullName>
    <label>Global Subject Category Description</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Group_Origin_Description__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>GE Allocated</fullName>
            </value>
            <value>
                <fullName>GE Business</fullName>
            </value>
            <value>
                <fullName>GE Sciences</fullName>
            </value>
            <value>
                <fullName>GE School</fullName>
            </value>
            <value>
                <fullName>GE Microsoft</fullName>
            </value>
            <value>
                <fullName>GE Math and Statistics</fullName>
            </value>
            <value>
                <fullName>GE Engg &amp; Computer Sci</fullName>
            </value>
            <value>
                <fullName>GE Other</fullName>
            </value>
            <value>
                <fullName>GE Applied Markets</fullName>
            </value>
            <value>
                <fullName>GE Social Sciences/Culinary</fullName>
            </value>
            <value>
                <fullName>Undefined</fullName>
            </value>
            <value>
                <fullName>PD Allocated</fullName>
            </value>
            <value>
                <fullName>PD Business</fullName>
            </value>
            <value>
                <fullName>PD Consumer</fullName>
            </value>
            <value>
                <fullName>PD Education</fullName>
            </value>
            <value>
                <fullName>PD Other</fullName>
            </value>
            <value>
                <fullName>PD Psychology</fullName>
            </value>
            <value>
                <fullName>PD Architecture</fullName>
            </value>
            <value>
                <fullName>PD Technology</fullName>
            </value>
            <value>
                <fullName>STMS Allocated</fullName>
            </value>
            <value>
                <fullName>STMS Life Sciences</fullName>
            </value>
            <value>
                <fullName>STMS Health Sciences</fullName>
            </value>
            <value>
                <fullName>STMS Other</fullName>
            </value>
            <value>
                <fullName>STMS Physical Sciences &amp; Engg</fullName>
            </value>
            <value>
                <fullName>STMS Social Sci &amp; Humanities</fullName>
            </value>
            <value>
                <fullName>HE Allocated</fullName>
            </value>
            <value>
                <fullName>HE Business</fullName>
            </value>
            <value>
                <fullName>HE Sciences</fullName>
            </value>
            <value>
                <fullName>HE School</fullName>
            </value>
            <value>
                <fullName>HE Microsoft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>