force-app/main/default/objects/PLM_Product_Family__c/fields/Number_Of_Volumes__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Volumes__c</fullName>
    <label>Number Of Volumes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>