force-app/main/default/objects/PLM_Product_Family__c/fields/PFRD__c.field-meta.xml
<CustomField>
    <fullName>PFRD__c</fullName>
    <label>Projected First Receipt Date</label>
    <type>Date</type>
</CustomField>