force-app/main/default/objects/PLM_Product_Family__c/fields/Primary_Market_Category__c.field-meta.xml
<CustomField>
    <fullName>Primary_Market_Category__c</fullName>
    <label>Primary Market Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Textbook</fullName>
            </value>
            <value>
                <fullName>Trade</fullName>
            </value>
            <value>
                <fullName>Professional</fullName>
            </value>
            <value>
                <fullName>Reference</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>