force-app/main/default/objects/PLM_Product_Family__c/fields/Product_Family_Short_Title__c.field-meta.xml
<CustomField>
    <fullName>Product_Family_Short_Title__c</fullName>
    <label>Short Title</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>