force-app/main/default/objects/PLM_Product_Family__c/fields/Product_Group_Origin_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Group_Origin_Description__c</fullName>
    <label>Product Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Location</valueSetName>
    </valueSet>
</CustomField>