force-app/main/default/objects/PLM_Product_Family__c/fields/Product_Line_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Line_Code__c</fullName>
    <label>Product Line Code</label>
    <length>200</length>
    <type>Text</type>
</CustomField>