force-app/main/default/objects/PLM_Product_Family__c/fields/Product_line_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_line_Description__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Product Line</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Product_Group_Origin_Description__c</field>
            <operation>equals</operation>
            <valueField>PLM_Product_line_Description__c.Location__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>PLM_Product_line_Description__c</referenceTo>
    <relationshipLabel>Product Family</relationshipLabel>
    <relationshipName>Product_Family</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>