force-app/main/default/objects/PLM_Product_Family__c/fields/Secondary_Market_Category__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Market_Category__c</fullName>
    <label>Secondary Market Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Primary_Market_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Textbook</fullName>
            </value>
            <value>
                <fullName>Trade</fullName>
            </value>
            <value>
                <fullName>Professional</fullName>
            </value>
            <value>
                <fullName>Reference</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>