force-app/main/default/objects/PLM_Product_Family__c/recordTypes/Reference.recordType-meta.xml
<RecordType>
    <fullName>Reference</fullName>
    <active>true</active>
    <label>Reference</label>
</RecordType>