force-app/main/default/objects/PLM_Product_Family__c/recordTypes/Trade.recordType-meta.xml
<RecordType>
    <fullName>Trade</fullName>
    <active>true</active>
    <label>Trade</label>
</RecordType>