force-app/main/default/objects/PLM_Product_Family__c/recordTypes/Wiley_Efficient_Learning_WEL.recordType-meta.xml
<RecordType>
    <fullName>Wiley_Efficient_Learning_WEL</fullName>
    <active>true</active>
    <label>Wiley Efficient Learning (WEL)</label>
</RecordType>